@@ -74,122 +74,3 @@ sub initLogSystem {
 		}, \$image, \$title));
 	}];
 }
-
-sub dumpTSVData {
-	local('$handle $entry');
-	$handle = openf("> $+ $1 $+ .tsv");
-	println($handle, join("\t", $2));
-	foreach $entry ($3) {
-		println($handle, join("\t", values($entry, $2))); 
-	}
-	closef($handle);
-}
-
-sub dumpXMLData {
-	local('$handle $entry $key $value');
-	$handle = openf("> $+ $1 $+ .xml");
-	println($handle, "< $+ $1 $+ >");
-	foreach $entry ($3) {
-		println($handle, "\t<entry>");
-		foreach $key ($2) {
-			$value = $entry[$key];
-			if ($key eq "info") {
-				println($handle, "\t\t< $+ $key $+ ><![CDATA[ $+ $value $+ ]]></ $+ $key $+ >");
-			}	
-			else {
-				println($handle, "\t\t< $+ $key $+ > $+ $value $+ </ $+ $key $+ >");
-			}
-		}
-		println($handle, "\t</entry>");
-	}
-	println($handle, "</ $+ $1 $+ >");
-	closef($handle);
-}
-
-sub dumpData {
-	dumpTSVData($1, $2, $3);
-	dumpXMLData($1, $2, $3);
-	logFile("$1 $+ .tsv", "artifacts", "tsv");
-	logFile("$1 $+ .xml", "artifacts", "xml");
-	deleteFile("$1 $+ .tsv");
-	deleteFile("$1 $+ .xml");
-}
-
-#
-# extract and export Metasploit data to easily parsable files (TSV and XML)
-#
-sub generateArtifacts {
-	local('@data $d $progress');
-
-	$progress = [new javax.swing.ProgressMonitor: $null, "Exporting Data", "vulnerabilities", 0, 100]; 
-
-	# 1. extract the known vulnerability information
-	@data = call($mclient, "db.vulns", [new HashMap])["vulns"];
-	dumpData("vulnerabilities", @("host", "port", "proto", "updated_at", "name", "refs"), @data);
-
-	[$progress setProgress: 15];
-	[$progress setNote: "credentials"];
-
-	# 2. credentials
-	@data = call($mclient, "db.creds", [new HashMap])["creds"];
-	dumpData("credentials", @("host", "port", "proto", "sname", "created_at", "active", "ptype", "user", "pass"), @data);
-		
-	[$progress setProgress: 30];
-	[$progress setNote: "loot"];
-
-	# 3. loot
-	@data = call($mclient, "db.loots")["loots"];
-	dumpData("loots", @("host", "ltype", "created_at", "updated_at", "info", "content_type", "name", "path"), @data);
-
-	[$progress setProgress: 45];
-	[$progress setNote: "clients"];
-
-	# 4. clients
-	@data = call($mclient, "db.clients", [new HashMap])["clients"];
-	dumpData("clients", @("host", "created_at", "updated_at", "ua_name", "ua_ver", "ua_string"), @data);
-
-	# 5. notes
-		# the data field is a base64 encoded version of a serialized ruby object... I don't
-		# feel like messing with it.
-
-		#@data = call($mclient, "db.notes", [new HashMap])["notes"];
-		#map({ $1["data"] = [msf.Base64 decode: $1["data"]]; }, @data);
-		#dumpData("notes", @("host", "updated_at", "ntype", "data"), @data);
-
-	# 6. hosts and services
-	local('@services @hosts $host $value $key $service');
-
-	foreach $host => $value (%hosts) {
-		push(@hosts, $value);
-		if ('services' in $value) {
-			foreach $key => $service ($value['services']) {
-				push(@services, $service);
-			}
-		}
-	}
-
-	[$progress setProgress: 60];
-	[$progress setNote: "hosts"];
-
-	dumpData("hosts", @("address", "mac", "state", "address", "address6", "name", "purpose", "info", "os_name", "os_flavor", "os_sp", "os_lang", "os_match", "created_at", "updated_at"), @hosts);
-
-	[$progress setProgress: 75];
-	[$progress setNote: "services"];
-
-	dumpData("services", @("host", "port", "state", "proto", "name", "created_at", "updated_at", "info"), @services);
-
-	[$progress setProgress: 90];
-	[$progress setNote: "host picture :)"];
-
-	# 7. take a pretty screenshot of the graph view...
-	makeScreenshot("hosts.png");
-	if (-exists "hosts.png") {
-		logFile("hosts.png", "artifacts", ".");
-		deleteFile("hosts.png");
-	}
-
-	[$progress setProgress: 100];
-	[$progress close];
-
-	return getFileProper(systemProperties()["user.home"], ".armitage", formatDate("yyMMdd"), "artifacts");
-}
